--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,11 +1,35 @@
 body
   margin 0
   padding 0
+  font-family arial
+
+
+@media all and (min-width: 960px)
+  .flex
+    display flex
+    flex-direction row
+    justify-content flex-start
+    align-items flex-start
+  nav
+    min-width 250px
+
+  main
+    flex-grow 1
+    background pink
+
+nav
+  background #eee
+  padding 1rem 0
+  li
+    line-height 1.5rem
+    &.active
+      font-weight bold
+    .date
+      display none
 
 main
   margin-left 1rem
   margin-right 1rem
-  max-width 30rem
 
 footer
   margin-top 2rem
