--- a/src/_includes/layout.pug
+++ b/src/_includes/layout.pug
@@ -9,7 +9,8 @@ html
   //- https://pugjs.org/language/interpolation.html#string-interpolation-unescaped
   body
     .header
-      div ici une image
+      p.title Stage d’observation du rapport de stage
+      div.subtitle par Victor SENN en 3E à  l’ Externat des enfants nantais. 
     .flex
       nav
         ul
