--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,6 +4,7 @@ body
   font-family arial
 
 
+
 @media all and (min-width: 960px)
   .flex
     display flex
@@ -16,6 +17,24 @@ body
   main
     flex-grow 1
     background pink
+
+.header
+  background rgb(3,42,104)
+  background linear-gradient(90deg, rgba(3,42,104,1) 0%, rgba(117,201,200,1) 100%)
+  padding 1em
+
+  color white
+
+  .title
+    font-size 1.5rem
+    font-family Rockwell
+    font-weight bold
+
+  .subtitle
+    font-size 1rem
+    font-family "Open Sans"
+    font-weight 550
+
 
 nav
   background #eee
