--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -25,6 +25,14 @@ body
 
   color white
 
+  .logo
+    float left
+    width 120px
+    height 100px
+    background purple
+    img
+      width 100px
+
   .title
     font-size 1.5rem
     font-family Rockwell
