--- a/src/_includes/layout.pug
+++ b/src/_includes/layout.pug
@@ -29,7 +29,8 @@ html
                span(class='date')
                  = article.data.date
       main
-        block content
+        .content
+          block content
     //- footer should be only on index, yet atm there is only one page
     footer
       block footer
