--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -45,7 +45,6 @@ body
 
 
 nav
-  background #eee
   padding 1rem 0
   ul
     list-style: none
@@ -75,6 +74,8 @@ footer
     padding-left 0
     margin-left 1ex
     max-width 30rem
+a
+  color #0b80ef
 
 img
   max-width 100vw
