--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -29,7 +29,6 @@ body
     float left
     width 120px
     height 100px
-    background purple
     img
       width 100px
 
@@ -40,7 +39,6 @@ body
 
   .subtitle
     font-size 1rem
-    font-family "Open Sans"
     font-weight 550
 
 
@@ -87,6 +85,10 @@ h1, h2
 h1
   font-weight bold
   font-size 26px
+
+hr
+  border-top 1px solid #ccc
+  margin .2rem
 
 sup
   font-size .5em
