--- a/src/_includes/article.pug
+++ b/src/_includes/article.pug
@@ -2,7 +2,7 @@ extends /layout.pug
 
 block content
   h1=title
-  time(datetime=page.date)=page.date
+  time(datetime=page.date)=page.date.toLocaleDateString('fr-FR')
   div.tags
     each tag in tags
       span=tag
