--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -45,7 +45,10 @@ body
 nav
   padding 1rem 0
   ul
+    padding-bottom 1rem
     list-style: none
+    &.pages
+      border-bottom 1px solid #ccc
     li
       line-height 1.7rem
       &.active
@@ -85,10 +88,6 @@ h1, h2
 h1
   font-weight bold
   font-size 26px
-
-hr
-  border-top 1px solid #ccc
-  margin .2rem
 
 sup
   font-size .5em
