--- a/src/_includes/layout.pug
+++ b/src/_includes/layout.pug
@@ -13,7 +13,7 @@ html
       div.logo
         a(href="/")
           img(src="/assets/webviclogo.png")
-      p.title Stage d’observation du rapport de stage
+      p.title Stage d’observation en entreprise
       div.subtitle par Victor SENN en 3E à  l’ Externat des enfants nantais.
     .flex
       nav
